name:                powermate
version:             0.1
synopsis:            PowerMate bindings
description:         PowerMate bindings for Haskell,
                     MPD bindings (barely) for Haskell.
Stability:           Experimental
category:            System
license:             BSD3
license-file:        LICENSE
author:              Evan Martin
maintainer:          Evan Martin <martine@danga.com>
homepage:            http://neugierig.org/software/darcs/powermate/

tested-with:         GHC==7.0.4
                   , GHC==7.2.2
                   , GHC==7.4.2
                   , GHC==7.6.3
                   , GHC==7.8.4
                   , GHC==7.10.3
                   , GHC==8.0.1

Cabal-Version:       >= 1.10
build-type:          Simple
extra-source-files:  src/PowerMate.hsc

Library
        build-depends:          base>3, unix, directory, network
        other-extensions:       ForeignFunctionInterface
        hs-source-dirs:         src

        ghc-options:            -O2 -Wall -optl-Wl,-s
        ghc-prof-options:       -prof -auto-all

        Exposed-modules:        MPD, PowerMate

        default-language:       Haskell2010

executable powermate-print
  -- .hs or .lhs file containing the Main module.
  main-is:             powermate-print.hs

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base > 3
                     , powermate

  -- Base language which the package is written in.
  default-language:    Haskell2010

executable powermate-pulse
  -- .hs or .lhs file containing the Main module.
  main-is:             powermate-pulse.hs

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base > 3
                     , powermate

  -- Base language which the package is written in.
  default-language:    Haskell2010
