name:                powermate
version:             1.0
synopsis:            PowerMate bindings
description:         PowerMate bindings for Haskell,
                     MPD bindings (barely) for Haskell.
Stability:           Experimental
category:            System, Hardware
license:             MIT
license-file:        LICENSE
author:              Evan Martin
maintainer:          Patrick Pelletier <code@funwithsoftware.org>
homepage:            https://github.com/ppelleti/powermate
bug-reports:         https://github.com/ppelleti/powermate/issues
copyright:           (C) 2006 Evan Martin,
                     (C) 2017 Patrick Pelletier

tested-with:         GHC==7.2.2
                   , GHC==7.4.2
                   , GHC==7.6.3
                   , GHC==7.8.4
                   , GHC==7.10.3
                   , GHC==8.0.1

Cabal-Version:       >= 1.10
build-type:          Simple
extra-source-files:  src/PowerMate.hsc
                   , CHANGELOG
                   , README.md

source-repository head
  Type:     git
  Location: https://github.com/ppelleti/powermate.git

Library
        build-depends:          base >= 4.4 && < 5
                              , unix
                              , directory
                              , network
        other-extensions:       ForeignFunctionInterface
        hs-source-dirs:         src

        ghc-options:            -Wall

        Exposed-modules:        MPD, PowerMate

        default-language:       Haskell2010

executable powermate-print
  -- .hs or .lhs file containing the Main module.
  main-is:             powermate-print.hs

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base >= 4.4 && < 5
                     , powermate

  -- Base language which the package is written in.
  default-language:    Haskell2010

executable powermate-pulse
  -- .hs or .lhs file containing the Main module.
  main-is:             powermate-pulse.hs

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base >= 4.4 && < 5
                     , powermate

  -- Base language which the package is written in.
  default-language:    Haskell2010
